--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -3,19 +3,13 @@
 	"short_name": "cogs",
 	"icons": [
 		{
-			"src": "./assets/icon-256.png",
-			"sizes": "256x256",
+			"src": "/android-chrome-192x192.png",
+			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "./assets/maskable_icon_x512.png",
+			"src": "/android-chrome-512x512.png",
 			"sizes": "512x512",
-			"type": "image/png",
-			"purpose": "any maskable"
-		},
-		{
-			"src": "./assets/icon-1024.png",
-			"sizes": "1024x1024",
 			"type": "image/png"
 		}
 	],
