chore: icons fix again & refactoring, ui zoom to 1.3

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,14 +1,15 @@
 {
 	"name": "cogs",
 	"short_name": "cogs",
+	"description": "A cognitive platform for cognitive needs",
 	"icons": [
 		{
-			"src": "/android-chrome-192x192.png",
+			"src": "/icon-192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "/android-chrome-512x512.png",
+			"src": "/icon-512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
