--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -4,12 +4,12 @@
 	"description": "A cognitive platform for cognitive needs",
 	"icons": [
 		{
-			"src": "/icon-192.png",
+			"src": "/assets/icon-192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "/icon-512.png",
+			"src": "/assets/icon-512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
