--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,12 +32,14 @@ eframe = { version = "=0.32.0", default-features = false, features = [
     "wayland",       # To support Linux (and CI).
     "x11",           # To support older Linux distributions (restores one of the default features).
 ] }
-catppuccin-egui = { version = "5.6.0", default-features = false, features = ["egui32"] }
+catppuccin-egui = { version = "=5.6.0", default-features = false, features = ["egui32"] }
 
 log = "=0.4.27"
 
 # You only need serde if you want app persistence:
 serde = { version = "=1.0.219", features = ["derive"] }
+egui_extras = { version="=0.32.0", features = [ "all_loaders" ] }
+const_format = "0.2.34"
 
 
 # Native deps
