chore: code linting upd

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -160,6 +160,7 @@ get_unwrap = "warn"
 implicit_clone = "warn"
 imprecise_flops = "warn"
 index_refutable_slice = "warn"
+indexing_slicing = "warn"
 inefficient_to_string = "warn"
 infinite_loop = "warn"
 into_iter_without_iter = "warn"
@@ -194,7 +195,6 @@ manual_string_new = "warn"
 map_err_ignore = "warn"
 map_flatten = "warn"
 match_bool = "warn"
-match_on_vec_items = "warn"
 match_same_arms = "warn"
 match_wild_err_arm = "warn"
 match_wildcard_for_single_variants = "warn"
