--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,11 @@ targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 [dependencies]
 ##############
 
-egui = "=0.32.0"
+egui = { version="=0.32.0", features = [
+    "persistence",   # Enable persistence of memory (window positions etc).
+    "log",           # It makes egui log some errors using the `log` crate.
+    "serde",         # Allow serialization using `serde`.
+ ] }
 eframe = { version = "=0.32.0", default-features = false, features = [
     "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
     "default_fonts", # Embed the default egui fonts.
@@ -40,6 +44,7 @@ log = "=0.4.27"
 serde = { version = "=1.0.219", features = ["derive"] }
 egui_extras = { version="=0.32.0", features = [ "all_loaders" ] }
 const_format = "0.2.34"
+ehttp = { version="=0.5.0", features = [ "json" ] }
 
 
 # Native deps
