--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,68 +1,9 @@
-#########
-[package]
-#########
-
-name = "cogs"
-description = "A cognitive platform for cognitive needs"
-version = "0.1.0"
-authors = ["Marius Ileana <dev@devisions.org>"]
-edition = "2024"
-include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
-rust-version = "1.88"
-
-
-##########################
-[package.metadata.docs.rs]
-##########################
-
-all-features = true
-targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
-
-
-##############
-[dependencies]
-##############
-
-egui = { version="=0.32.0", features = [
-    "persistence",   # Enable persistence of memory (window positions etc).
-    "log",           # It makes egui log some errors using the `log` crate.
-    "serde",         # Allow serialization using `serde`.
- ] }
-eframe = { version = "=0.32.0", default-features = false, features = [
-    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
-    "default_fonts", # Embed the default egui fonts.
-    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
-    "persistence",   # Enable restoring app state when restarting the app.
-    "wayland",       # To support Linux (and CI).
-    "x11",           # To support older Linux distributions (restores one of the default features).
-] }
-catppuccin-egui = { version = "=5.6.0", default-features = false, features = ["egui32"] }
-
-log = "=0.4.27"
-
-# You only need serde if you want app persistence:
-serde = { version = "=1.0.219", features = ["derive"] }
-egui_extras = { version="=0.32.0", features = [ "all_loaders" ] }
-const_format = "0.2.34"
-ehttp = { version="=0.5.0", features = [ "json" ] }
-
-
-# Native deps
-########################################################
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-########################################################
-
-env_logger = "=0.11.8"
-
-
-# Web deps
-###################################################
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-###################################################
-
-wasm-bindgen-futures = "=0.4.50"
-web-sys = "=0.3.77"              # to access the DOM (to hide the loading text)
-
+[workspace]
+members = [ 
+    "be",
+    "ui",
+]
+resolver = "3"
 
 #################
 [profile.release]
@@ -89,13 +30,12 @@ opt-level = 2
 # eframe = { path = "../egui/crates/eframe" }
 
 
-
 ###############################################################################
 # Lints  #
 #########
 
-[lints]
-workspace = true
+# [lints]
+# workspace = true
 
 [workspace.lints.rust]
 unsafe_code = "deny"
@@ -276,6 +216,5 @@ verbose_file_reads = "warn"
 wildcard_dependencies = "warn"
 wildcard_imports = "warn"
 zero_sized_map_values = "warn"
-
 manual_range_contains = "allow"       # this is better on 'allow'
 map_unwrap_or = "allow"               # this is better on 'allow'
