--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [ 
+    "shared", 
     "svc",
     "ui",
 ]
@@ -9,14 +10,14 @@ resolver = "3"
 [profile.release]
 #################
 
-opt-level = 2 # fast and small wasm
+opt-level = 2 # Fast and small wasm.
 
-# Optimize all dependencies even in debug builds:
+
 #########################
 [profile.dev.package."*"]
 #########################
 
-opt-level = 2
+opt-level = 2 # Optimize all dependencies even in debug builds.
 
 
 [patch.crates-io]
