--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 serde = { version = "=1.0.219", features = ["derive"] }
 thiserror = { version="=2.0.12" }
 anyhow = { version="=1.0.98" }
+serde_json = "=1.0.141"
 
 [lints]
 workspace = true
