--- a/svc/Cargo.toml
+++ b/svc/Cargo.toml
@@ -17,7 +17,7 @@ edition = "2024"
 
 axum = { version = "=0.8.4", features = ["macros"]}
 tower = { version = "=0.5.2", features = ["util"]}
-tower-http = { version = "=0.6.6", features = ["fs"]}
+tower-http = { version = "=0.6.6", features = ["fs", "cors"] }
 tokio = { version = "=1.46.1", features = ["full"]}
 http = { version = "=1.3.1" }
 serde = { version = "=1.0.219", features = ["derive"] }
