--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -1,14 +1,18 @@
 [package]
 name = "cogs_shared"
-description = "the shared domain and dtos between the svc and ui"
+description = "The shared domain (model & logic) and DTOs between the Svc and UI."
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-serde = { version = "=1.0.219", features = ["derive"] }
-thiserror = { version="=2.0.12" }
-anyhow = { version="=1.0.98" }
-serde_json = "=1.0.141"
+serde         = { version = "=1.0.219", features = [ "derive" ] }
+serde_json    = { version = "=1.0.142" }
+thiserror     = { version = "=2.0.12"  }
+anyhow        = { version = "=1.0.98"  }
+chrono        = { version = "=0.4.41", features = [ "serde" ] }
+strum         = { version = "=0.27.2", features = [ "derive" ] }
+log           = { version = "0.4.27",  features = [ "serde" ] }   # serde support for Level and LevelFilter.
+snowflake     = { version = "1.3.0" }
 
 [lints]
 workspace = true
