--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -24,6 +24,7 @@ targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 ##############
 
 cogs_shared = { path = "../shared" }
+
 egui = { version = "=0.32.3", features = [
     "persistence",   # Enable persistence of memory (window positions etc).
     "log",           # It makes egui log some errors using the `log` crate.
@@ -37,11 +38,11 @@ eframe = { version = "=0.32.3", default-features = false, features = [
     "wayland",       # To support Linux (and CI).
     "x11",           # To support older Linux distributions (restores one of the default features).
 ] }
-catppuccin-egui = { version = "=5.6.0", default-features = false, features = ["egui32"] }
+catppuccin-egui = { version = "=5.6.0", default-features = false, features = [ "egui32" ] }
 
-log = "=0.4.28"
+log = { version = "=0.4.28" }
 
-serde             = { version = "=1.0.223", features = [ "derive" ] }      # for the app persistence.
+serde             = { version = "=1.0.225", features = [ "derive" ] }      # for the app persistence.
 egui_extras       = { version = "=0.32.3", features = [ "all_loaders" ] }
 const_format      = { version = "=0.2.34" }
 ehttp             = { version = "=0.5.0", features = [ "json" ] }
