--- a/svc/Cargo.toml
+++ b/svc/Cargo.toml
@@ -17,7 +17,7 @@ tower             = { version = "=0.5.2", features = [ "util" ] }
 tower-http        = { version = "=0.6.6", features = [ "fs", "cors", "trace" ] }
 tokio             = { version = "=1.47.1", features = [ "full" ] }
 http              = { version = "=1.3.1" }
-serde             = { version = "=1.0.225", features = [ "derive" ] }
+serde             = { version = "=1.0.226", features = [ "derive" ] }
 serde_json        = { version = "=1.0.145" }
 sqlx              = { version = "=0.8.6", features = [
     "macros",
@@ -26,12 +26,12 @@ sqlx              = { version = "=0.8.6", features = [
 ]}
 
 axum_session      = { version = "=0.16.0"  }
-axum_session_auth = { version = "=0.16.0", features = [ "advanced" ] }
+axum_session_auth = { version = "=0.16.0", features = [ "rest_mode" ] }
 axum_session_sqlx = { version = "=0.5.0",  features = [ "postgres", "tls-rustls" ] }
 async-trait       = { version = "=0.1.89"  }
 
 thiserror         = { version = "=2.0.16"  }
-anyhow            = { version = "=1.0.99"  }
+anyhow            = { version = "=1.0.100"  }
 log               = { version = "=0.4.28"  }
 simple_logger     = { version = "=5.0.0"   }
 
