--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,5 @@
 		"**/.factorypath": true,
 		"target": true
 	},
-	"explorerExclude.backup": {},
-	"rust-analyzer.cargo.target": "wasm32-unknown-unknown"
+	"explorerExclude.backup": {}
 }
