--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2024"
 
 [dependencies]
 serde         = { version = "=1.0.228", features = [ "derive" ] }
-serde_json    = { version = "=1.0.149" }
-thiserror     = { version = "=2.0.18"  }
+serde_json    = { version = "=1.0.149"  }
+thiserror     = { version = "=2.0.18"   }
 anyhow        = { version = "=1.0.100"  }
 chrono        = { version = "=0.4.43", features = [ "serde" ] }
 strum         = { version = "=0.27.2", features = [ "derive" ] }
 log           = { version = "=0.4.29", features = [ "serde" ] }   # serde support for Level and LevelFilter.
-snowflake     = { version = "=1.3.0" }
+uuid          = { version = "=1.20.0", features = ["v7", "std"] }
 
 [lints]
 workspace = true
