--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -9,9 +9,10 @@ serde         = { version = "=1.0.228", features = [ "derive" ] }
 serde_json    = { version = "=1.0.149"  }
 thiserror     = { version = "=2.0.18"   }
 anyhow        = { version = "=1.0.100"  }
-chrono        = { version = "=0.4.43", features = [ "serde" ] }
-strum         = { version = "=0.27.2", features = [ "derive" ] }
-log           = { version = "=0.4.29", features = [ "serde" ] }   # serde support for Level and LevelFilter.
+chrono        = { version = "=0.4.43",  features = [ "serde" ] }
+strum         = { version = "=0.27.2",  features = [ "derive" ] }
+log           = { version = "=0.4.29",  features = [ "serde" ] }   # serde support for Level and LevelFilter.
+serde_with    = { version = "3.16.1"    }
 
 [lints]
 workspace = true
