--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -13,6 +13,7 @@ chrono        = { version = "=0.4.43",  features = [ "serde" ] }
 strum         = { version = "=0.27.2",  features = [ "derive" ] }
 log           = { version = "=0.4.29",  features = [ "serde" ] }   # serde support for Level and LevelFilter.
 serde_with    = { version = "=3.16.1"   }
+rust_decimal  = { version = "=1.40.0"   , features = [ "serde" ] }
 
 [lints]
 workspace = true
